# mandelbrot

./: .gitignore  CMakeLists.txt
src/: Renderer.cu  Renderer.cuh  Vector2.hpp  View.cpp  View.hpp  main.cpp  main.hpp
